pages/rosetta/rosetta.scss
body {
}
* {
    box-sizing: border-box;
}
nav {
    background-color: #000;
    color: #fff;
    ul {
        list-style-type: none;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        margin: 0;
        padding: 0;
        li {
            display: flex;
            justify-content: center;
            align-items: center;
            flex-grow: 1;
            a {
                display: flex;
                justify-content: center;
                align-items: center;
                padding: 1rem;
                text-decoration: none;
                width: 100%;
                height: 100%;
                color: #fff;
                &:hover {
                    color: #fff;
                }
            }
        }
    }
}

.start {
    background-color: #fcc;
}

.end {
    background-color: #cfc;
}

#testIdentifier {
    margin: 0 0 25px 0;
    padding: 1rem;
}

#nav {
    font-size: 1rem;
}

#interactionExperiments {
    border: 1px solid #ccc;
    padding: 25px;
    margin: 0 0 10px 0;
}

#randomContent {
    border: 1px solid #ccc;
    padding: 25px;
    margin: 0 0 10px 0;
}

.active {
    color: #0f0;
    background-color: #000;
}

.bad {
    color: #fff;
    background-color: #f00;
}

#loginArea {
    color: #000;
    border: 1px solid #ccc;
    float: right;
    width: min-content;
    font-family: 'courier new', courier, fixed-width;
    font-size: small;
    background-color: #ece;
    h2 {
        margin: 0;
        padding: 0;
        text-align: center;
        background-color: #333;
        color: #fff;
        font-size: medium;
        cursor: pointer;
        white-space: nowrap;
    }
}


#loginForm {
    padding: 1rem;
}

.basicArea {
    border: 1px solid #cfc;
    padding: 0.5rem;
    margin: 0 0 0.5rem 0;
}

.basicArea div {
    background-color: #cfc;
    padding: 0.5rem;
    margin: 0.5rem 0 0 0;
}

    input, select, button {
        font-size: 1rem;
        padding: 0.5rem
    }

    #contribute {
        background-color: #fcc;
        color: #000;
        padding: 1rem;
        margin: 0 0 10px 0;
    }

